added post and delete routes to climbers_comment
